[tool.poetry]
name = "maicoin"
version = "0.1.1"
description = ""
authors = ["narumi <toucans-cutouts0f@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.10"
websockets = "^12.0"
loguru = "^0.6.0"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
pydantic = "^2.6.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-cov = "^5.0.0"
ruff = "^0.3.4"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = ["build"]
line-length = 120

[tool.ruff.lint]
select = [
    "B", # flake8-bugbear
    "C", # flake8-comprehensions
    "E", # pycodestyle errors
    "F", # pyflakes
    "I", # isort
    "N", # pep8-naming
    "UP", # pyupgrade
    "W", # pycodestyle warnings

]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]
